<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainScreen"
    android:orientation="vertical"
    android:background="@drawable/dados"
    android:gravity="center">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_main_screen"
        android:textColor="@color/white"
        android:fontFamily="@font/pixelifysans_bold"
        android:textSize="40sp"
        android:textStyle="bold"
        android:layout_margin="10dp"/>
    <Button
        android:id="@+id/btnRules"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/btn_rules"
        android:layout_margin="10dp"
        android:fontFamily="@font/pixelifysans_regular"
        android:backgroundTint="@color/btn_background"
        android:textStyle="bold"/>
    <Button
        android:id="@+id/btnCreate"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/btn_create"
        android:layout_margin="10dp"
        android:fontFamily="@font/pixelifysans_regular"
        android:backgroundTint="@color/btn_background"
        android:textStyle="bold"/>
    <Button
        android:id="@+id/btnJoin"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/btn_join"
        android:layout_margin="10dp"
        android:fontFamily="@font/pixelifysans_regular"
        android:backgroundTint="@color/btn_background"
        android:textStyle="bold"/>

</LinearLayout>