<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".MainScreen"
    android:orientation="vertical"
    android:background="@drawable/dados"
    android:gravity="center">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_main_screen"
        android:textColor="@color/white"
        android:fontFamily="@font/pixelifysans_bold"
        android:textSize="40sp"
        android:textStyle="bold"
        android:layout_margin="10dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_rules"
        android:textColor="@color/white"
        android:fontFamily="@font/pixelifysans_bold"
        android:textSize="40sp"
        android:textStyle="bold"
        android:layout_margin="10dp"/>

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cardCornerRadius="15dp"
        android:backgroundTint="@color/background_card_translucent">

        <TextView
            android:layout_margin="15dp"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:textSize="16dp"
            android:text="@string/tv_game_rules"/>

    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/btnPlay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_play"
        android:layout_margin="10dp"
        android:fontFamily="@font/pixelifysans_regular"
        android:backgroundTint="@color/btn_background"
        android:textStyle="bold"/>



</LinearLayout>