<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/dados"
    android:gravity="center|top"
    android:orientation="vertical"
    android:paddingVertical="20dp"
    android:paddingHorizontal="10dp"
    tools:context=".BoardGameActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/pixelifysans_bold"
        android:text="@string/tv_main_screen"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:layout_marginVertical="15dp"/>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="400dp"
        app:cardCornerRadius="30dp"
        app:cardBackgroundColor="@color/black">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/tabparques"/>

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:columnCount="3"
            android:rowCount="3">

        </GridLayout>



    </androidx.cardview.widget.CardView>
    
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="20dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnCast"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            android:backgroundTint="@color/btn_background"
            android:text="@string/btn_cast" />

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            app:cardCornerRadius="10dp">

            <TextView
                android:id="@+id/tvDado1"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:background="@color/white"
                android:gravity="center"
                android:textSize="23sp"
                android:textStyle="bold"
                tools:text="6" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            app:cardCornerRadius="10dp">

            <TextView
                android:id="@+id/tvDado2"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:background="@color/white"
                android:gravity="center"
                android:textSize="23sp"
                android:textStyle="bold"
                tools:text="6" />
        </androidx.cardview.widget.CardView>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="10dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnMain"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:backgroundTint="@color/btn_background"
            android:text="@string/btn_main" />

        <Button
            android:id="@+id/btnRules"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:backgroundTint="@color/btn_background"
            android:text="@string/btn_rules" />
    </LinearLayout>

</LinearLayout>