<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/dados"
    tools:context=".CreateGameActivity"
    android:orientation="vertical"
    android:gravity="center|top"
    android:paddingVertical="30dp"
    android:paddingHorizontal="15dp">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:fontFamily="@font/pixelifysans_regular"
            android:text="@string/tv_hall_code"
            android:textColor="@color/white"
            android:textSize="15sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:fontFamily="@font/pixelifysans_regular"
            tools:text="321354657984 "
            android:textColor="@color/white"
            android:textSize="15sp" />

    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/background_card_translucent"
        android:layout_margin="10dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:fontFamily="@font/pixelifysans_regular"
                android:text="@string/tv_player"
                android:textColor="@color/white"
                android:textSize="15sp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:fontFamily="@font/pixelifysans_regular"
                    android:text="@string/tv_player_name"
                    android:textColor="@color/white"
                    android:textSize="15sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:fontFamily="@font/pixelifysans_regular"
                    tools:text="Juanito Lopez "
                    android:textColor="@color/white"
                    android:textSize="15sp" />
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:fontFamily="@font/pixelifysans_regular"
                android:text="@string/tv_player"
                android:textColor="@color/white"
                android:textSize="15sp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:fontFamily="@font/pixelifysans_regular"
                    android:text="@string/tv_player_name"
                    android:textColor="@color/white"
                    android:textSize="15sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:fontFamily="@font/pixelifysans_regular"
                    tools:text="Pablito Ruiz "
                    android:textColor="@color/white"
                    android:textSize="15sp" />
            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <Button
        android:layout_margin="15dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/btn_background"
        android:text="@string/btn_start_game"/>

    <TextView
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:fontFamily="@font/pixelifysans_medium"
        android:text="@string/tv_warning"
        android:textSize="20sp"
        />

</LinearLayout>